--- a/2014-05-19-qtscript/2014-05-19-qtscript.md
+++ b/2014-05-19-qtscript/2014-05-19-qtscript.md
@@ -8,7 +8,7 @@ latex: true
 
 Возникла потребность в интерпретаторе простых функций в среде Qt. Например, у вас программа, где пользователь может сам ввести свою функцию, которая что-то считает (например, sin(x)). Как быть? В Qt есть хороший встроенный язык QtScript как раз для этих нужд. Единственно, что синтаксис у него под JavaScript, хотя мне больше по душе был бы C++, но ладно.
 
-**Внимание!** QtScript — **устарел**! Вместо него надо использовать **QJSEngine**. В статье [Интерпретатор функций в Qt — QJSEngine](/blog/2016/qjsengine) про него рассказываются вещи, аналогичные в данной статье для QtScript.
+**Внимание!** QtScript — **устарел**! Вместо него надо использовать **QJSEngine**. В статье [Интерпретатор функций в Qt — QJSEngine](https://github.com/Harrix/harrix.dev-blog-2016/blob/main/2016-03-23-qjsengine/2016-03-23-qjsengine.md) про него рассказываются вещи, аналогичные в данной статье для QtScript.
 
 При написании статьи и изучении материала использовалась статья <https://pro-prof.com/archives/1316>.
 
